cluster/apps/networking/external/adguard/endpoint.yaml
---
kind: Endpoints
apiVersion: v1
metadata:
  name: adguard-home
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.2.21
    ports:
      - port: 8080
        name: web
