cluster/apps/networking/external/adguard/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: adguard-home
  namespace: networking
spec:
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
